refactor: try java 8